[package]
name = "arri_derive"
version = "0.81.3"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
sonic-rs = { workspace = true, optional = true }
syn = { version = "2.0.101", features = ["derive"] }
