[package]
name = "test_client_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arri_client = { path = "../../../languages/rust/rust-client"}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
rand = "0.8.5"

